--- a/index.html
+++ b/index.html
@@ -22,10 +22,11 @@
           <h1 class="class=" about-me-name>Oleksii Kikot</h1>
 
           <p class="about-me-description">
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
-            eiusmod tempor incididunt ut labore et dolore magna aliqua. Quis
-            ipsum suspendisse ultrices gravida. Risus commodo viverra maecenas
-            accumsan lacus vel facilisis.
+            Passionate developer looking for a full-time job. Have an experience
+            of developing SPA’s in a multi-lingual team, working according to
+            Agile methodology, fast-learning, open-minded and self-disciplined.
+            Always keep up with the latest technical updates, especially which
+            allow to build comfortable and innovative applications.
           </p>
         </div>
 
