added new picture, removed extra styles

--- a/index.html
+++ b/index.html
@@ -32,22 +32,73 @@
 
         <!--My projects info-->
         <div class="My-projects">
-          <h3 class="main-content-title">Projects</h3>
+          <h3 class="main-content-title">Project Experience</h3>
 
           <ol class="my-projects-list">
             <li class="my-projects-item">
-              <span class="my-projects-text">
-                <a
-                  href="https://alxkkt.github.io/team-project-01/"
-                  class="my-projects-link"
-                  >https://alxkkt.github.io/team-project-01/</a
+              <a class="my-projects-link" href=""
+                >Donuts Masterclass Landing Page</a
+              >
+              <p>
+                <span class="tech-stack-label"
+                  >Tech Stack
+                  ...................................................................</span
                 >
-                .......
-                <span class="my-projects-bracket">[</span> HTML5, CSS3
+                <span class="my-projects-bracket">[</span> HTML, SCSS,
+                JavaScript
                 <span class="my-projects-bracket">]</span>
-              </span>
+              </p>
+              <p>
+                <span class="tech-stack-label">Role: </span>
+                <span class="role-description"
+                  >Team Lead - managing GitHub workflow, creating hero section
+                  and body background positioning</span
+                >
+              </p>
             </li>
             <li class="my-projects-item">
+              <a
+                class="my-projects-link"
+                href="https://alxkkt.github.io/js-team-project-16/"
+                >Online Movie Library</a
+              >
+              <p>
+                <span class="tech-stack-label"
+                  >Tech Stack ..................</span
+                >
+                <span class="my-projects-bracket">[</span> HTML, SCSS,
+                JavaScript, AJAX, REST API, Parcel
+                <span class="my-projects-bracket">]</span>
+              </p>
+              <p>
+                <span class="tech-stack-label">Role: </span>
+                <span class="role-description"
+                  >Team Lead - creation of adaptive night theme and modal window
+                  with a movie description</span
+                >
+              </p>
+            </li>
+            <li class="my-projects-item">
+              <a
+                class="my-projects-link"
+                href="https://react-team-project-protest.netlify.app/"
+                >QA Theory Test</a
+              >
+              <p>
+                <span class="tech-stack-label">Tech Stack ..............</span>
+                <span class="my-projects-bracket">[</span> React, Redux, RTK,
+                REST API, SCSS Modules, CRA
+                <span class="my-projects-bracket">]</span>
+              </p>
+              <p>
+                <span class="tech-stack-label">Role: </span>
+                <span class="role-description"
+                  >Developer - creation of adaptive night theme, development of
+                  the header section</span
+                >
+              </p>
+            </li>
+            <!-- <li class="my-projects-item">
               <span class="my-projects-text">
                 <a
                   href="https://alxkkt.github.io/js-team-project-16/"
@@ -58,19 +109,7 @@
                 <span class="my-projects-bracket">[</span> JavaScript
                 <span class="my-projects-bracket">]</span>
               </span>
-            </li>
-            <li class="my-projects-item">
-              <span class="my-projects-text">
-                <a
-                  href="https://react-team-project-protest.netlify.app/"
-                  class="my-projects-link"
-                  >https://react-team-project-protest.netlify.app/</a
-                >
-                ................
-                <span class="my-projects-bracket">[</span> React
-                <span class="my-projects-bracket">]</span>
-              </span>
-            </li>
+            </li> -->
           </ol>
         </div>
 
@@ -132,7 +171,7 @@
           <!--Education Section-->
           <div class="education-section">
             <h3 class="main-content-title">Education</h3>
-            <h4 class="education-place">goIT School</h4>
+            <h4 class="education-place">GOit School</h4>
             <h4 class="education-profile">Full Stack Developer</h4>
             <p class="education-period">
               July 2021 - June 2022
@@ -154,99 +193,134 @@
       <aside class="sidebar-section">
         <img
           class="profile-img"
-          src="./profile.jpg"
+          src="./profile_cropped.jpg"
           alt="my photo"
           width="320"
         />
 
+        <!--Tech Skills Section-->
+        <div class="skills-wrapper">
+          <div class="tech-skills-section">
+            <h3 class="sidebar-title">Tech Stack</h3>
+            <ul class="tech-skills-list">
+              <li class="tech-skills-item">
+                <span class="tech-skills-item-text">HTML</span>
+              </li>
+              <li class="tech-skills-item">
+                <span class="tech-skills-item-text">CSS / SCSS</span>
+              </li>
+              <li class="tech-skills-item">
+                <span class="tech-skills-item-text">GIT</span>
+              </li>
+              <li class="tech-skills-item">
+                <span class="tech-skills-item-text">WebPack / Parcel</span>
+              </li>
+              <li class="tech-skills-item">
+                <span class="tech-skills-item-text">JavaScript ES6+</span>
+              </li>
+              <li class="tech-skills-item">
+                <span class="tech-skills-item-text">React / Redux / RTK</span>
+              </li>
+              <li class="tech-skills-item">
+                <span class="tech-skills-item-text">Node.js</span>
+              </li>
+              <li class="tech-skills-item">
+                <span class="tech-skills-item-text">Scrum / Agile</span>
+              </li>
+            </ul>
+          </div>
+
+          <!-- Utility Stack -->
+
+          <div class="tech-skills-section">
+            <h3 class="sidebar-title">Utility Stack</h3>
+            <ul class="tech-skills-list">
+              <li class="tech-skills-item">
+                <span class="tech-skills-item-text">Figma</span>
+              </li>
+              <li class="tech-skills-item">
+                <span class="tech-skills-item-text">Trello</span>
+              </li>
+              <li class="tech-skills-item">
+                <span class="tech-skills-item-text">NPM / Yarn</span>
+              </li>
+              <li class="tech-skills-item">
+                <span class="tech-skills-item-text">Netlify</span>
+              </li>
+            </ul>
+          </div>
+        </div>
+
+        <!--Soft Skills Section-->
+        <div class="skills-wrapper">
+          <div class="soft-skills-section">
+            <h3 class="sidebar-title">Soft Skills</h3>
+            <ul class="soft-skills-list">
+              <li class="soft-skills-item">
+                <span class="soft-skills-item-text">Resilience</span>
+              </li>
+              <li class="soft-skills-item">
+                <span class="soft-skills-item-text">Teamwork</span>
+              </li>
+              <li class="soft-skills-item">
+                <span class="soft-skills-item-text">Resourcefulness</span>
+              </li>
+              <li class="soft-skills-item">
+                <span class="soft-skills-item-text">Willingness to learn</span>
+              </li>
+            </ul>
+          </div>
+          <div class="soft-skills-section">
+            <h3 class="sidebar-title">Languages</h3>
+            <ul class="soft-skills-list">
+              <li class="soft-skills-item">
+                <span class="soft-skills-item-text">Ukrainian</span>
+                <span> - Native</span>
+              </li>
+              <li class="soft-skills-item">
+                <span class="soft-skills-item-text">English</span>
+                <span> - B1</span>
+              </li>
+              <li class="soft-skills-item">
+                <span class="soft-skills-item-text">Russin</span>
+                <span> - Native</span>
+              </li>
+            </ul>
+          </div>
+        </div>
         <!--Contacts Section-->
         <div class="contacts-section">
           <h3 class="sidebar-title">Contacts</h3>
           <ul class="social-list">
             <li class="social-list__item">
-              <a href="https://github.com/alxkkt"
-                ><svg class="social-icon">
-                  <use href="./icons.svg#icon-github"></use>
-                </svg>
-              </a>
+              <svg width="20" height="20" class="social-list-icon">
+                <use href="./icons.svg#icon-location"></use>
+              </svg>
+              <p class="social-list__line">Dahab, Egypt</p>
             </li>
             <li class="social-list__item">
-              <a href="https://www.linkedin.com/in/oleksii-kikot-b12960241/">
-                <svg class="social-icon">
-                  <use href="./icons.svg#icon-linkedin"></use>
-                </svg>
-              </a>
+              <svg width="20" height="20" class="social-list-icon">
+                <use href="./icons.svg#icon-mail"></use>
+              </svg>
+              <p class="social-list__line">kikot.oleksii@gmail.com</p>
             </li>
             <li class="social-list__item">
-              <a href="mailto:kikot.oleksii@gmail.com">
-                <svg class="social-icon">
-                  <use href="./icons.svg#icon-mail"></use>
-                </svg>
-              </a>
+              <svg width="20" height="20" class="social-list-icon">
+                <use href="./icons.svg#icon-github"></use>
+              </svg>
+              <a class="social-list__line" href="https://github.com/alxkkt"
+                >My Github Page</a
+              >
             </li>
-          </ul>
-        </div>
-
-        <!--Tech Skills Section-->
-        <div class="tech-skills-section">
-          <h3 class="sidebar-title">Tech Stack</h3>
-          <ul class="tech-skills-list">
-            <li class="tech-skills-item">
-              <span class="tech-skills-item-text">HTML</span>
-            </li>
-            <li class="tech-skills-item">
-              <span class="tech-skills-item-text">CSS / SCSS</span>
-            </li>
-            <li class="tech-skills-item">
-              <span class="tech-skills-item-text">GIT</span>
-            </li>
-            <li class="tech-skills-item">
-              <span class="tech-skills-item-text">WebPack / Parcel</span>
-            </li>
-            <li class="tech-skills-item">
-              <span class="tech-skills-item-text">JavaScript ES6+</span>
-            </li>
-            <li class="tech-skills-item">
-              <span class="tech-skills-item-text">React / Redux / RTK</span>
-            </li>
-            <li class="tech-skills-item">
-              <span class="tech-skills-item-text">Node.js</span>
-            </li>
-          </ul>
-        </div>
-
-        <!-- Utility Stack -->
-
-        <div class="tech-skills-section">
-          <h3 class="sidebar-title">Utility Stack</h3>
-          <ul class="tech-skills-list">
-            <li class="tech-skills-item">
-              <span class="tech-skills-item-text">Figma</span>
-            </li>
-            <li class="tech-skills-item">
-              <span class="tech-skills-item-text">Trello</span>
-            </li>
-            <li class="tech-skills-item">
-              <span class="tech-skills-item-text">NPM / Yarn</span>
-            </li>
-          </ul>
-        </div>
-
-        <!--Soft Skills Section-->
-        <div class="soft-skills-section">
-          <h3 class="sidebar-title">Soft Skills</h3>
-          <ul class="soft-skills-list">
-            <li class="soft-skills-item">
-              <span class="soft-skills-item-text">Scrum</span>
-            </li>
-            <li class="soft-skills-item">
-              <span class="soft-skills-item-text">Agile</span>
-            </li>
-            <li class="soft-skills-item">
-              <span class="soft-skills-item-text">Resilience</span>
-            </li>
-            <li class="soft-skills-item">
-              <span class="soft-skills-item-text">Teamwork</span>
+            <li class="social-list__item">
+              <svg width="20" height="20" class="social-list-icon">
+                <use href="./icons.svg#icon-linkedin"></use>
+              </svg>
+              <a
+                class="social-list__line"
+                href=" https://www.linkedin.com/in/oleksii-kikot-b12960241/"
+                >My LinkedIn Page</a
+              >
             </li>
           </ul>
         </div>
