--- a/index.html
+++ b/index.html
@@ -245,7 +245,7 @@
                 <span class="tech-skills-item-text">NPM / Yarn</span>
               </li>
               <li class="tech-skills-item">
-                <span class="tech-skills-item-text">Netlify</span>
+                <span class="tech-skills-item-text">NPM / Yarn</span>
               </li>
             </ul>
           </div>
