--- a/index.html
+++ b/index.html
@@ -39,14 +39,12 @@
               <a class="my-projects-link" href=""
                 >Donuts Masterclass Landing Page</a
               >
-              <p>
+              <p class="tech-container">
                 <span class="tech-stack-label"
                   >Tech Stack
-                  ...................................................................</span
+                  ........................................................................................</span
                 >
-                <span class="my-projects-bracket">[</span> HTML, SCSS,
-                JavaScript
-                <span class="my-projects-bracket">]</span>
+                [ HTML, SCSS, JavaScript ]
               </p>
               <p>
                 <span class="tech-stack-label">Role: </span>
@@ -62,13 +60,11 @@
                 href="https://alxkkt.github.io/js-team-project-16/"
                 >Online Movie Library</a
               >
-              <p>
+              <p class="tech-container">
                 <span class="tech-stack-label"
-                  >Tech Stack ..................</span
-                >
-                <span class="my-projects-bracket">[</span> HTML, SCSS,
-                JavaScript, AJAX, REST API, Parcel
-                <span class="my-projects-bracket">]</span>
+                  >Tech Stack .......................................
+                </span>
+                [ HTML, SCSS, JavaScript, AJAX, REST API, Parcel ]
               </p>
               <p>
                 <span class="tech-stack-label">Role: </span>
@@ -84,11 +80,11 @@
                 href="https://react-team-project-protest.netlify.app/"
                 >QA Theory Test</a
               >
-              <p>
-                <span class="tech-stack-label">Tech Stack ..............</span>
-                <span class="my-projects-bracket">[</span> React, Redux, RTK,
-                REST API, SCSS Modules, CRA
-                <span class="my-projects-bracket">]</span>
+              <p class="tech-container">
+                <span class="tech-stack-label"
+                  >Tech Stack ..................................
+                </span>
+                [ React, Redux, RTK, REST API, SCSS Modules, CRA ]
               </p>
               <p>
                 <span class="tech-stack-label">Role: </span>
@@ -98,18 +94,6 @@
                 >
               </p>
             </li>
-            <!-- <li class="my-projects-item">
-              <span class="my-projects-text">
-                <a
-                  href="https://alxkkt.github.io/js-team-project-16/"
-                  class="my-projects-link"
-                  >https://alxkkt.github.io/js-team-project-16/</a
-                >
-                .........
-                <span class="my-projects-bracket">[</span> JavaScript
-                <span class="my-projects-bracket">]</span>
-              </span>
-            </li> -->
           </ol>
         </div>
 
@@ -245,7 +229,7 @@
                 <span class="tech-skills-item-text">NPM / Yarn</span>
               </li>
               <li class="tech-skills-item">
-                <span class="tech-skills-item-text">NPM / Yarn</span>
+                <span class="tech-skills-item-text">Netlify</span>
               </li>
             </ul>
           </div>
