--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
               <p class="tech-container">
                 <span class="tech-stack-label"
                   >Tech Stack
-                  ........................................................................................</span
+                  ..................................................................................................</span
                 >
                 [ HTML, SCSS, JavaScript ]
               </p>
@@ -62,7 +62,7 @@
               >
               <p class="tech-container">
                 <span class="tech-stack-label"
-                  >Tech Stack .......................................
+                  >Tech Stack ..........................................
                 </span>
                 [ HTML, SCSS, JavaScript, AJAX, REST API, Parcel ]
               </p>
@@ -82,7 +82,7 @@
               >
               <p class="tech-container">
                 <span class="tech-stack-label"
-                  >Tech Stack ..................................
+                  >Tech Stack ....................................
                 </span>
                 [ React, Redux, RTK, REST API, SCSS Modules, CRA ]
               </p>
