--- a/index.html
+++ b/index.html
@@ -40,10 +40,7 @@
                 >Donuts Masterclass Landing Page</a
               >
               <p class="tech-container">
-                <span class="tech-stack-label"
-                  >Tech Stack
-                  ..................................................................................................</span
-                >
+                <span class="tech-stack-label">Tech Stack</span>
                 [ HTML, SCSS, JavaScript ]
               </p>
               <p>
@@ -61,9 +58,7 @@
                 >Online Movie Library</a
               >
               <p class="tech-container">
-                <span class="tech-stack-label"
-                  >Tech Stack ..........................................
-                </span>
+                <span class="tech-stack-label">Tech Stack</span>
                 [ HTML, SCSS, JavaScript, AJAX, REST API, Parcel ]
               </p>
               <p>
@@ -81,9 +76,7 @@
                 >QA Theory Test</a
               >
               <p class="tech-container">
-                <span class="tech-stack-label"
-                  >Tech Stack ....................................
-                </span>
+                <span class="tech-stack-label">Tech Stack</span>
                 [ React, Redux, RTK, REST API, SCSS Modules, CRA ]
               </p>
               <p>
