--- a/index.html
+++ b/index.html
@@ -36,7 +36,9 @@
 
           <ol class="my-projects-list">
             <li class="my-projects-item">
-              <a class="my-projects-link" href=""
+              <a
+                class="my-projects-link"
+                href="https://alxkkt.github.io/team-project-01/"
                 >Donuts Masterclass Landing Page</a
               >
               <p class="tech-container">
