--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 
           <p class="about-me-description">
             Passionate developer looking for a full-time job. Have an experience
-            of developing SPA’s in a multi-lingual team, working according to
+            of developing SPA's in a multi-lingual team, working according to
             Agile methodology, fast-learning, open-minded and self-disciplined.
             Always keep up with the latest technical updates, especially which
             allow to build comfortable and innovative applications.
@@ -41,6 +41,14 @@
                 href="https://alxkkt.github.io/team-project-01/"
                 >Donuts Masterclass Landing Page</a
               >
+              <p class="tech-container">
+                <span class="tech-stack-label">Source Code</span>
+                <a
+                  href="https://github.com/alxkkt/team-project-01"
+                  class="source-link"
+                  >github.com/alxkkt/team-project-01</a
+                >
+              </p>
               <p class="tech-container">
                 <span class="tech-stack-label">Tech Stack</span>
                 [ HTML, SCSS, JavaScript ]
@@ -60,6 +68,14 @@
                 >Online Movie Library</a
               >
               <p class="tech-container">
+                <span class="tech-stack-label">Source Code</span>
+                <a
+                  href="https://github.com/alxkkt/js-team-project-16"
+                  class="source-link"
+                  >github.com/alxkkt/js-team-project-16</a
+                >
+              </p>
+              <p class="tech-container">
                 <span class="tech-stack-label">Tech Stack</span>
                 [ HTML, SCSS, JavaScript, AJAX, REST API, Parcel ]
               </p>
@@ -77,6 +93,14 @@
                 href="https://react-team-project-protest.netlify.app/"
                 >QA Theory Test</a
               >
+              <p class="tech-container">
+                <span class="tech-stack-label">Source Code</span>
+                <a
+                  class="source-link"
+                  href="https://github.com/OleksandrDomanskyi/react-team-project-pro-test"
+                  >github.com/OleksandrDomanskyi/react-team-project-pro-test</a
+                >
+              </p>
               <p class="tech-container">
                 <span class="tech-stack-label">Tech Stack</span>
                 [ React, Redux, RTK, REST API, SCSS Modules, CRA ]
@@ -177,6 +201,43 @@
           width="320"
         />
 
+        <!--Contacts Section-->
+        <div class="contacts-section">
+          <h3 class="sidebar-title">Contacts</h3>
+          <ul class="social-list">
+            <li class="social-list__item">
+              <svg width="20" height="20" class="social-list-icon">
+                <use href="./icons.svg#icon-location"></use>
+              </svg>
+              <p class="social-list__line">Dahab, Egypt</p>
+            </li>
+            <li class="social-list__item">
+              <svg width="20" height="20" class="social-list-icon">
+                <use href="./icons.svg#icon-mail"></use>
+              </svg>
+              <p class="social-list__line">kikot.oleksii@gmail.com</p>
+            </li>
+            <li class="social-list__item">
+              <svg width="20" height="20" class="social-list-icon">
+                <use href="./icons.svg#icon-github"></use>
+              </svg>
+              <a class="social-list__line" href="https://github.com/alxkkt"
+                >My Github Page</a
+              >
+            </li>
+            <li class="social-list__item">
+              <svg width="20" height="20" class="social-list-icon">
+                <use href="./icons.svg#icon-linkedin"></use>
+              </svg>
+              <a
+                class="social-list__line"
+                href=" https://www.linkedin.com/in/oleksii-kikot-b12960241/"
+                >My LinkedIn Page</a
+              >
+            </li>
+          </ul>
+        </div>
+
         <!--Tech Skills Section-->
         <div class="skills-wrapper">
           <div class="tech-skills-section">
@@ -253,55 +314,19 @@
             <h3 class="sidebar-title">Languages</h3>
             <ul class="soft-skills-list">
               <li class="soft-skills-item">
+                <span class="soft-skills-item-text">English</span>
+                <span> - Upper Intermediate</span>
+              </li>
+              <li class="soft-skills-item">
                 <span class="soft-skills-item-text">Ukrainian</span>
                 <span> - Native</span>
               </li>
               <li class="soft-skills-item">
-                <span class="soft-skills-item-text">English</span>
-                <span> - B1</span>
-              </li>
-              <li class="soft-skills-item">
-                <span class="soft-skills-item-text">Russin</span>
+                <span class="soft-skills-item-text">Russian</span>
                 <span> - Native</span>
               </li>
             </ul>
           </div>
-        </div>
-        <!--Contacts Section-->
-        <div class="contacts-section">
-          <h3 class="sidebar-title">Contacts</h3>
-          <ul class="social-list">
-            <li class="social-list__item">
-              <svg width="20" height="20" class="social-list-icon">
-                <use href="./icons.svg#icon-location"></use>
-              </svg>
-              <p class="social-list__line">Dahab, Egypt</p>
-            </li>
-            <li class="social-list__item">
-              <svg width="20" height="20" class="social-list-icon">
-                <use href="./icons.svg#icon-mail"></use>
-              </svg>
-              <p class="social-list__line">kikot.oleksii@gmail.com</p>
-            </li>
-            <li class="social-list__item">
-              <svg width="20" height="20" class="social-list-icon">
-                <use href="./icons.svg#icon-github"></use>
-              </svg>
-              <a class="social-list__line" href="https://github.com/alxkkt"
-                >My Github Page</a
-              >
-            </li>
-            <li class="social-list__item">
-              <svg width="20" height="20" class="social-list-icon">
-                <use href="./icons.svg#icon-linkedin"></use>
-              </svg>
-              <a
-                class="social-list__line"
-                href=" https://www.linkedin.com/in/oleksii-kikot-b12960241/"
-                >My LinkedIn Page</a
-              >
-            </li>
-          </ul>
         </div>
       </aside>
     </div>
