--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
       <div class="main-content-section">
         <!-- about me section-->
         <div class="about-me-section">
-          <h2 class="about-me-profession">Front-End Developer</h2>
+          <h2 class="about-me-profession">Full Stack Developer</h2>
           <h1 class="class=" about-me-name>Oleksii Kikot</h1>
 
           <p class="about-me-description">
@@ -265,6 +265,9 @@
                 <span class="tech-skills-item-text">Node.js</span>
               </li>
               <li class="tech-skills-item">
+                <span class="tech-skills-item-text">Express</span>
+              </li>
+              <li class="tech-skills-item">
                 <span class="tech-skills-item-text">Scrum / Agile</span>
               </li>
             </ul>
@@ -280,6 +283,9 @@
               </li>
               <li class="tech-skills-item">
                 <span class="tech-skills-item-text">Trello</span>
+              </li>
+              <li class="tech-skills-item">
+                <span class="tech-skills-item-text">Postman</span>
               </li>
               <li class="tech-skills-item">
                 <span class="tech-skills-item-text">NPM / Yarn</span>
