--- a/index.html
+++ b/index.html
@@ -22,10 +22,9 @@
 
         <p class="about-me-description">
           Passionate developer looking for a full-time job. Have an experience
-          of developing SPA's in a multi-lingual team, working according to
+          of developing SPA's from a scratch, working according to
           Agile methodology, fast-learning, open-minded and self-disciplined.
-          Always keep up with the latest technical updates, especially which
-          allow to build comfortable and innovative applications.
+          Always keeping up with the latest technical updates and features.
         </p>
       </div>
 
@@ -35,24 +34,6 @@
 
         <ol class="my-projects-list">
           <li class="my-projects-item">
-            <a class="my-projects-link" href="https://alxkkt.github.io/team-project-01/">Donuts Masterclass Landing
-              Page</a>
-            <p class="tech-container">
-              <span class="tech-stack-label">Source Code</span>
-              <a href="https://github.com/alxkkt/team-project-01"
-                class="source-link">github.com/alxkkt/team-project-01</a>
-            </p>
-            <p class="tech-container">
-              <span class="tech-stack-label">Tech Stack</span>
-              [ HTML, SCSS, JavaScript ]
-            </p>
-            <p>
-              <span class="tech-stack-label">Role: </span>
-              <span class="role-description">Team Lead - managing GitHub workflow, creating hero section
-                and body background positioning</span>
-            </p>
-          </li>
-          <li class="my-projects-item">
             <a class="my-projects-link" href="https://alxkkt.github.io/js-team-project-16/">Online Movie Library</a>
             <p class="tech-container">
               <span class="tech-stack-label">Source Code</span>
@@ -61,11 +42,11 @@
             </p>
             <p class="tech-container">
               <span class="tech-stack-label">Tech Stack</span>
-              [ HTML, SCSS, JavaScript, AJAX, REST API, Parcel ]
+              [ HTML, SCSS, VanillaJS, AJAX, REST API, Parcel ]
             </p>
-            <p>
+            <p class="role-container">
               <span class="tech-stack-label">Role: </span>
-              <span class="role-description">Team Lead - creation of adaptive night theme and modal window
+              <span class="role-description">Team Lead - created night theme, modal window
                 with a movie description</span>
             </p>
           </li>
@@ -78,12 +59,29 @@
             </p>
             <p class="tech-container">
               <span class="tech-stack-label">Tech Stack</span>
-              [ React, Redux, RTK, REST API, SCSS Modules, CRA ]
+              [ React, Redux, RTK, REST API, SCSS Modules, Webpack ]
             </p>
-            <p>
+            <p class="role-container">
               <span class="tech-stack-label">Role: </span>
-              <span class="role-description">Developer - creation of adaptive night theme, development of
-                the header section</span>
+              <span class="role-description">Developer - created night theme, developed
+                the header section and logout feature</span>
+            </p>
+          </li>
+          <li class="my-projects-item">
+            <a class="my-projects-link" href="kapusta-bank-client.vercel.app/">Finance Operations Web App</a>
+            <p class="tech-container">
+              <span class="tech-stack-label">Source Code</span>
+              <a href="https://github.com/alxkkt/kapusta-bank-client"
+                class="source-link">github.com/alxkkt/kapusta-bank-client</a>
+            </p>
+            <p class="tech-container">
+              <span class="tech-stack-label">Tech Stack</span>
+              [ React, Node.js, Express, MongoDB ]
+            </p>
+            <p class="role-container">
+              <span class="tech-stack-label">Role: </span>
+              <span class="role-description">Team Lead - deployed production code at Vercel and Heroku, created API
+                endpoints and router for all kind of queries</span>
             </p>
           </li>
         </ol>
@@ -247,9 +245,6 @@
               <span class="tech-skills-item-text">Postman</span>
             </li>
             <li class="tech-skills-item">
-              <span class="tech-skills-item-text">NPM / Yarn</span>
-            </li>
-            <li class="tech-skills-item">
               <span class="tech-skills-item-text">Netlify / Vercel / Heroku</span>
             </li>
           </ul>
@@ -284,7 +279,7 @@
             </li>
             <li class="soft-skills-item">
               <span class="soft-skills-item-text">Ukrainian</span>
-              <span> - Native</span>
+              <span> - Mother Tongue</span>
             </li>
           </ul>
         </div>
