--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
         <div class="my-work-expirience-company-block">
           <h4 class="my-work-expirience-position">
             Third Officer / Second Officer
-            <span class="my-work-expirience-company">Swisse-Atlantique S.A.</span>
+            <span class="my-work-expirience-company" style="color: #fb6d3a">Swisse-Atlantique S.A.</span>
           </h4>
           <p class="my-work-expirience-time">
             April 2020 - April 2022
@@ -121,7 +121,7 @@
         <div class="my-work-expirience-company-block">
           <h4 class="my-work-expirience-position">
             Trainee Officer / Junior Officer
-            <span class="my-work-expirience-company">V.Ships / CSL International</span>
+            <span class="my-work-expirience-company" style="color: #fb6d3a">V.Ships / CSL International</span>
           </h4>
           <p class="my-work-expirience-time">
             June 2015 - September 2019
@@ -141,13 +141,13 @@
         <!--Education Section-->
         <div class="education-section">
           <h3 class="main-content-title">Education</h3>
-          <h4 class="education-place">GOit School</h4>
+          <h4 class="education-place" style="color: #fb6d3a;">GOit School</h4>
           <h4 class="education-profile">Full Stack Developer</h4>
           <p class="education-period">
             July 2021 - August 2022
             <span class="education-devider">|</span> Ukraine
           </p>
-          <h4 class="education-place">
+          <h4 class="education-place" style="color: #fb6d3a">
             National University "Odessa Maritime Academy"
           </h4>
           <h4 class="education-profile">Navigator</h4>
@@ -160,8 +160,8 @@
     </div>
 
     <!--Side Bar Section-->
-    <aside class="sidebar-section">
-      <img class="profile-img" src="./profile_cropped.jpg" alt="my photo" width="320" />
+    <aside class="sidebar-section" style="background-color: #1e2939;">
+      <img class="profile-img" src="./small.png" alt="my photo" width="320" />
 
       <!--Contacts Section-->
       <div class="contacts-section">
@@ -200,28 +200,28 @@
         <div class="tech-skills-section">
           <h3 class="sidebar-title">Tech Stack</h3>
           <ul class="tech-skills-list">
-            <li class="tech-skills-item">
+            <li class="tech-skills-item" style="color: #fb6d3a">
               <span class="tech-skills-item-text">HTML / CSS / SCSS</span>
             </li>
-            <li class="tech-skills-item">
+            <li class="tech-skills-item" style="color: #fb6d3a">
               <span class="tech-skills-item-text">JavaScript ES6+</span>
             </li>
-            <li class="tech-skills-item">
+            <li class="tech-skills-item" style="color: #fb6d3a">
               <span class="tech-skills-item-text">Typescript</span>
             </li>
-            <li class="tech-skills-item">
+            <li class="tech-skills-item" style="color: #fb6d3a">
               <span class="tech-skills-item-text">React / Redux / RTK</span>
             </li>
-            <li class="tech-skills-item">
+            <li class="tech-skills-item" style="color: #fb6d3a">
               <span class="tech-skills-item-text">Node.js</span>
             </li>
-            <li class="tech-skills-item">
+            <li class="tech-skills-item" style="color: #fb6d3a">
               <span class="tech-skills-item-text">Express</span>
             </li>
-            <li class="tech-skills-item">
+            <li class="tech-skills-item" style="color: #fb6d3a">
               <span class="tech-skills-item-text">MongoDB</span>
             </li>
-            <li class="tech-skills-item">
+            <li class="tech-skills-item" style="color: #fb6d3a">
               <span class="tech-skills-item-text">Scrum / Agile</span>
             </li>
           </ul>
@@ -232,19 +232,19 @@
         <div class="tech-skills-section">
           <h3 class="sidebar-title">Utility Stack</h3>
           <ul class="tech-skills-list">
-            <li class="tech-skills-item">
+            <li class="tech-skills-item" style="color: #fb6d3a">
               <span class="tech-skills-item-text">Git</span>
             </li>
-            <li class="tech-skills-item">
+            <li class="tech-skills-item" style="color: #fb6d3a">
               <span class="tech-skills-item-text">WebPack</span>
             </li>
-            <li class="tech-skills-item">
+            <li class="tech-skills-item" style="color: #fb6d3a">
               <span class="tech-skills-item-text">Figma</span>
             </li>
-            <li class="tech-skills-item">
+            <li class="tech-skills-item" style="color: #fb6d3a">
               <span class="tech-skills-item-text">Postman</span>
             </li>
-            <li class="tech-skills-item">
+            <li class="tech-skills-item" style="color: #fb6d3a">
               <span class="tech-skills-item-text">Netlify / Vercel / Heroku</span>
             </li>
           </ul>
@@ -256,16 +256,16 @@
         <div class="soft-skills-section">
           <h3 class="sidebar-title">Soft Skills</h3>
           <ul class="soft-skills-list">
-            <li class="soft-skills-item">
+            <li class="soft-skills-item" style="color: #fb6d3a">
               <span class="soft-skills-item-text">Resilience</span>
             </li>
-            <li class="soft-skills-item">
+            <li class="soft-skills-item" style="color: #fb6d3a">
               <span class="soft-skills-item-text">Teamwork</span>
             </li>
-            <li class="soft-skills-item">
+            <li class="soft-skills-item" style="color: #fb6d3a">
               <span class="soft-skills-item-text">Resourcefulness</span>
             </li>
-            <li class="soft-skills-item">
+            <li class="soft-skills-item" style="color: #fb6d3a">
               <span class="soft-skills-item-text">Willingness to learn</span>
             </li>
           </ul>
@@ -273,13 +273,13 @@
         <div class="soft-skills-section">
           <h3 class="sidebar-title">Languages</h3>
           <ul class="soft-skills-list">
-            <li class="soft-skills-item">
+            <li class="soft-skills-item" style="color: #fb6d3a">
               <span class="soft-skills-item-text">English</span>
-              <span> - Upper Intermediate</span>
+              <span style="color: #fb6d3a"> - Upper Intermediate</span>
             </li>
-            <li class="soft-skills-item">
+            <li class="soft-skills-item" style="color: #fb6d3a">
               <span class="soft-skills-item-text">Ukrainian</span>
-              <span> - Mother Tongue</span>
+              <span style="color: #fb6d3a"> - Mother Tongue</span>
             </li>
           </ul>
         </div>
