--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
             </p>
           </li>
           <li class="my-projects-item">
-            <a class="my-projects-link" href="kapusta-bank-client.vercel.app/">Finance Operations Web App</a>
+            <a class="my-projects-link" href="https://kapusta-bank-client.vercel.app">Finance Operations Web App</a>
             <p class="tech-container">
               <span class="tech-stack-label">Source Code</span>
               <a href="https://github.com/alxkkt/kapusta-bank-client"
