--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
 
       <!--my work expirience-->
       <div class="my-work-expirience">
-        <h3 class="main-content-title">Work Expirience</h3>
+        <h3 class="main-content-title">Work Experience</h3>
 
         <!--Company 1-->
         <div class="my-work-expirience-company-block">
