--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <div class="main-content-section">
       <!-- about me section-->
       <div class="about-me-section">
-        <h2 class="about-me-profession">Full Stack Developer</h2>
+        <h2 class="about-me-profession">Front End Developer</h2>
         <h1 class="class=" about-me-name>Oleksii Kikot</h1>
 
         <p class="about-me-description">
